Demos: fixes the icon position of the sections link on Firefox.

--- a/docs/demos/_assets/css/jqm-demos.css
+++ b/docs/demos/_assets/css/jqm-demos.css
@@ -172,7 +172,6 @@ body, .jqm-demos  {
 	margin-top: .8em;
 	margin-bottom: -1em;
 	text-decoration: none;
-	white-space: nowrap;
 }
 .jqm-content a.jqm-sections-link span {
 	width: 18px;
